--- a/web/index.html
+++ b/web/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mikufy v2.1 - 代码编辑器</title>
+    <title>Mikufy v2.2(stable) - Code Editor</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Logo区域 - 左上角 -->
     <div id="logo-container">
-        <img src="../Mikufy.png" alt="Mikufy Logo" id="logo-img">
+        <img src="Mikufy.png" alt="Mikufy Logo" id="logo-img">
     </div>
 
     <!-- 主界面容器 -->
@@ -19,13 +19,13 @@
             <!-- 文件操作按钮区域 -->
             <div id="file-toolbar">
                 <button id="btn-open-folder" title="打开文件夹 (Ctrl+O)">
-                    <img src="../Icons/Folder-Open.png" alt="打开文件夹">
+                    <img src="Icons/Folder-Open.png" alt="打开文件夹">
                 </button>
                 <button id="btn-new-folder" title="新建文件夹 (Ctrl+F)">
-                    <img src="../Icons/Folder-New.png" alt="新建文件夹">
+                    <img src="Icons/Folder-New.png" alt="新建文件夹">
                 </button>
                 <button id="btn-new-file" title="新建文件 (Ctrl+N)">
-                    <img src="../Icons/File-New.png" alt="新建文件">
+                    <img src="Icons/File-New.png" alt="新建文件">
                 </button>
             </div>
 
@@ -33,7 +33,7 @@
             <div id="path-display">
                 <div id="current-path">无</div>
                 <button id="btn-back" title="返回上级目录" disabled>
-                    <img src="../Icons/Put-away.png" alt="返回">
+                    <img src="Icons/Put-away.png" alt="返回">
                 </button>
             </div>
 
