--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
- * Mikufy v2.4(stable) - 代码编辑器前端页面
+ * Mikufy v2.5(stable) - 代码编辑器前端页面
  *
  * 这是一个基于Web的代码编辑器界面，支持文件浏览、多标签页编辑、
  * 语法高亮、媒体文件预览等功能。
@@ -13,7 +13,7 @@
  *   - 弹窗组件：右键菜单、新建对话框、壁纸选择、消息弹窗
  *
  * 作者：MikuTrive
- * 版本：v2.4(stable)
+ * 版本：v2.5(stable)
  * 许可证：详见 LICENSE 文件
  -->
 <html lang="zh-CN">
@@ -37,6 +37,21 @@
     <div id="logo-container">
         <!-- Logo图片 -->
         <img src="Mikufy.png" alt="Mikufy Logo" id="logo-img">
+    </div>
+
+    <!--
+     * 通知栏（从头顶下滑）
+     * 功能：显示操作成功等通知信息
+     * 默认状态：隐藏（top: -60px）
+     * 位置：页面顶部，固定定位
+     * 动画：从头顶下滑到视口
+     * z-index：2000（确保在其他元素之上）
+     -->
+    <div id="notification">
+        <!-- 通知图标 -->
+        <img src="Icons/Hight.svg" alt="成功" class="notification-icon">
+        <!-- 通知文本 -->
+        <span class="notification-text"></span>
     </div>
 
     <!--
