--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
- * Mikufy v2.5(stable) - 代码编辑器前端页面
+ * Mikufy v2.7-nova - 代码编辑器前端页面
  *
  * 这是一个基于Web的代码编辑器界面，支持文件浏览、多标签页编辑、
  * 语法高亮、媒体文件预览等功能。
@@ -13,7 +13,7 @@
  *   - 弹窗组件：右键菜单、新建对话框、壁纸选择、消息弹窗
  *
  * 作者：MikuTrive
- * 版本：v2.5(stable)
+ * 版本：v2.7-nova
  * 许可证：详见 LICENSE 文件
  -->
 <html lang="zh-CN">
@@ -23,7 +23,7 @@
     <!-- 视口设置：确保在移动设备上正确显示 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 页面标题 -->
-    <title>Mikufy v2.3(stable) - Code Editor</title>
+    <title>Mikufy v2.7-nova - Code Editor</title>
     <!-- 加载样式表 -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -166,7 +166,6 @@
              *   - 代码编辑区：可编辑的代码内容
              *   - 垂直滚动条：自定义滚动条
              * 特性：
-             *   - 语法高亮：支持多种编程语言的语法高亮
              *   - 自动缩进：Tab键插入4个空格
              *   - 媒体预览：支持图片、视频、音频预览
              *   - 行号同步：滚动时行号与代码同步
@@ -178,7 +177,7 @@
                 </div>
 
                 <!-- 代码编辑区域 -->
-                <div id="code-editor">
+                <div id="code-editor" contenteditable="true" spellcheck="false">
                     <!-- 代码内容将通过JavaScript动态生成 -->
                 </div>
 
@@ -280,6 +279,7 @@
     </div>
 
     <!-- 加载JavaScript文件 -->
+    <script src="virtual_editor.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
